frontend/app/assets/stylesheets/archivesspace/header.less: Fix jumpy navbar responsively

--- a/frontend/app/assets/stylesheets/archivesspace/header.less
+++ b/frontend/app/assets/stylesheets/archivesspace/header.less
@@ -175,10 +175,6 @@ header .inset-label {
   .global-header,
   .repository-header {
     padding:  0;
-    .navbar {
-      position: relative;
-      margin: 0 -20px;
-    }
   }
 }
 @media (max-width: 767px) {
@@ -187,7 +183,7 @@ header .inset-label {
     padding: 0;
     .navbar {
       position: relative;
-      margin: 0;
+      float: right;
     }
   }
 }
